--- a/package.json
+++ b/package.json
@@ -15,3 +15,15 @@
     "socket.io": "^4.8.1"
   }
 }
+{
+  "name": "anontalk",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
+  }
+}
