--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Ignore node_modules
 node_modules/
 
+# Ignore environment variables (optional)
+.env
+
 # Ignore logs
 logs
 *.log
 
-# Ignore system files
-.DS_Store
-Thumbs.db
-
-# Ignore environment files
-.env
+# Ignore build/temp files (if any)
+dist/
+build/
