--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "anontalk",
   "version": "1.0.0",
-  "description": "Anonymous chat app",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node api/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
 }
