--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "anontalk",
   "version": "1.0.0",
   "scripts": {
-    "start": "node api/server.js"
+"scripts": {
+  "start": "node server.js"
+}
+
   },
   "dependencies": {
     "socket.io": "^4.7.2"
