--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "index.js",
   "name": "anontalk",
   "version": "1.0.0",
   "scripts": {
@@ -8,6 +9,8 @@
 
   },
   "dependencies": {
-    "socket.io": "^4.7.2"
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   }
+  "type": "commonjs",
 }
