--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "main": "index.js",
   "name": "anontalk",
   "version": "1.0.0",
+  "description": "AnonTalk Chat App",
+  "main": "server.js",
   "scripts": {
-"scripts": {
-  "start": "node server.js"
-}
-
+    "start": "node server.js"
   },
+  "keywords": [],
+  "author": "Nishit",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
   }
-  "type": "commonjs",
 }
